[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vishwakarma-env"
version = "1.0.0"
description = "OpenEnv RL environment for AI-driven factory operations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "vishwakarma_env.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vishwakarma_env*"]
